# architecture

./: .clang-format  CMakeLists.txt  README.md
cmake/: gtest.cmake  modules.cmake  qt.cmake  tests.cmake  utility.cmake
cmake/products/: cmdl.cmake  deluxe.cmake  demo.cmake  intern.cmake  mini.cmake  product.cmake
src/: CMakeLists.txt
src/app_info/: CMakeLists.txt  get_app_name.h
src/apps/: app.cpp.in
src/commands/: colors.cpp  filters.cpp
src/config/: config_debug.cpp  config_deluxe.cpp  config_mini.cpp  config_product.cpp  config_standard.h
src/core/: CMakeLists.txt  app_commands.h  config.h  error.h  exports.h  labels.h  process.h
src/core/core/: CMakeLists.txt  app_commands.cpp  config.h  exports.cpp  labels.cpp  register.h
src/core/image/: CMakeLists.txt  image.cpp  pixel.h
src/core_impl/: commands.cpp  config.cpp
src/export/: export_png.cpp
src/features/: CMakeLists.txt
src/features/cmd_colors/: CMakeLists.txt  secondary_colors.cpp
src/features/cmd_dev/: CMakeLists.txt  dev.cpp
src/features/cmd_filters/: CMakeLists.txt
src/features/cmd_noise/: CMakeLists.txt  random.cpp
src/features/cmd_pattern/: CMakeLists.txt  pattern.cpp
src/features/export/: CMakeLists.txt  export_png.cpp
src/image/: image.h  image_data.h
src/image_impl/: image.cpp
src/products/: CMakeLists.txt
src/products/cmdl/: CMakeLists.txt  cmdl.cpp  config_cmdl.cpp
src/products/deluxe/: CMakeLists.txt  config_deluxe.cpp
src/products/intern/: CMakeLists.txt  config_intern.cpp
src/products/mini/: CMakeLists.txt  config_mini.cpp
src/products/product/: CMakeLists.txt  config_product.cpp
src/products/product_utils/: CMakeLists.txt  config_standard.h
src/qt_util/: image_util.cpp  image_util.h
src/tests/: CMakeLists.txt  empty_config.cpp  test_empty.cpp  test_error.cpp
src/ui/: CMakeLists.txt  app.cpp  app.h  display.cpp  display.h  main_window.cpp  main_window.h  ui_app.cpp  ui_module_app_commands.cpp  ui_module_commands.cpp  ui_module_exports.cpp  ui_module_generic_commands.cpp  ui_module_macros.cpp  ui_modules.cpp  ui_modules.h  utility.cpp  utility.h
src/util/: CMakeLists.txt
