add_executable(app_product_cmdl)
make_generic_app("The Product - Command Line Tool" ${PRODUCT_VERSION} "product_cmdl" config_cmdl.cpp app_product_cmdl)
target_sources(app_product_cmdl PRIVATE cmdl.cpp)
target_link_libraries(app_product_cmdl PRIVATE lib_cmd_colors)
target_link_libraries(app_product_cmdl PRIVATE lib_cmd_filters)
target_link_libraries(app_product_cmdl PRIVATE lib_cmd_random)
target_link_libraries(app_product_cmdl PRIVATE lib_cmd_pattern)
target_link_libraries(app_product_cmdl PRIVATE lib_exports)
target_link_libraries(app_product_cmdl PRIVATE lib_qt_image_utils)
target_link_libraries(app_product_cmdl PRIVATE lib_app_info)


add_test(test_cmdl_info "product_cmdl")
add_test(test_cmdl_args "product_cmdl" "arg" "arg")
add_test(test_cmdl_work "product_cmdl" "test_image.png" "export.png" "cmd.fill.red" "cmd.fill.green" "cmd.fill.blue")
add_test(test_cmdl_fail_format "product_cmdl" "test_image.png" "export.invalid" "cmd.fill.red" "cmd.fill.green" "cmd.fill.blue")
add_test(test_cmdl_fail_cmd "product_cmdl" "test_image.png" "export.png" "cmd.fill.red" "invalid.command" "cmd.fill.blue")
set_tests_properties(test_cmdl_args test_cmdl_fail_format test_cmdl_fail_cmd PROPERTIES WILL_FAIL TRUE)
