add_executable(app_intern_dev)
make_generic_app("The Product - Intern Developer Version" ${PRODUCT_VERSION} "product_intern_dev" config_intern.cpp app_intern_dev)
use_qt_ui(app_intern_dev)
target_link_libraries(app_intern_dev PRIVATE lib_cmd_colors)
target_link_libraries(app_intern_dev PRIVATE lib_cmd_filters)
target_link_libraries(app_intern_dev PRIVATE lib_cmd_random)
target_link_libraries(app_intern_dev PRIVATE lib_cmd_pattern)
target_link_libraries(app_intern_dev PRIVATE lib_cmd_dev)
target_link_libraries(app_intern_dev PRIVATE lib_exports)
